[package]
name = "yamba-backend"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]

[dependencies]
failure = "0.1"
failure_derive = "0.1"
vlc-rs = "0.3"
clap = "2"
log = "0.4"
slog = "2.4"
slog-scope = "4.0"
slog-stdlog = "3.0"
slog-term = "2.4"
slog-async = "2.3"
lazy_static = "1.1"
glob = "0.2"
config = "0.9"
