[package]
name = "manager"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"
license = "LGPL-3.0-or-later"

[profile.release]
lto = true

[dependencies]
clap = "2"
jsonrpc-core = "12"
failure = "0.1"
owning_ref = "0.4"
rand = "0"
hashbrown = "0.4"
reqwest = "0.9"
serde = "1"
serde_json = "1"
futures = "0.1"
log = "0.4"
env_logger = "0.6"
tokio-signal = "0.2"
actix-web = "0.7"
# don't upgrade unless transition to actix-web 1.0 is done
actix = "0.7"
chashmap = "2.2"
sled = "0.24"
bincode= "1"

[dependencies.yamba_types]
version = "0"
path = "../backend/types"
features = ["rest","rpc","message"]

[dev-dependencies]
serde_urlencoded = "0.5"
tempfile = "3"