[package]
name = "yamba_types"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"

[features]
tower = ["tower-web"]
track = ["metrohash"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tower-web = { optional = true, version = "0"}
metrohash = { optional = true, version = "1" }