[package]
name = "yamba-backend"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]

[profile.release]
lto = "fat"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
clap = "2"
log = "0.4"
log4rs = "0.8"
lazy_static = "1.1"
config = "0.9"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8"
serde_urlencoded = "0.5"
tokio = "0.1"
tokio-io = "0.1"
hyper = "0.12"
jsonrpc-lite = "0.5"
futures = "0.1"
tokio-signal = "0.2"
atomic = "0.4"
rusqlite="0.15"
mysql="14.1"

[dependencies.vlc-rs]
git = "https://github.com/0xpr03/vlc-rs"
branch = "feature_args"
