[package]
name = "yamba-daemon"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"

[features]
default = []
# valgrind massif support
# ads !halt rpc to allow stop of dameon via process::exit
massif = []

[dependencies]
failure = "0.1"
failure_derive = "0.1"
clap = "2"
log = "0.4"
log4rs = "0.8"
lazy_static = "1"
config = "0.9"
reqwest = "0.9"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
serde_plain = "0.3"
sha2 = "0.8"
serde_urlencoded = "0.6"
tokio = "0.1"
tokio-threadpool = "0.1"
futures = "0.1"
tokio-signal = "0.2"
atomic = "0.4"
rusqlite="0"
hashbrown = "0.5"
metrohash = "1"
chrono = { version = "0.4", features = ["serde"] }
libpulse-sys = {version = "1.5", default-features = false }
erased-serde = "0.3"
libpulse-binding =  {version = "2", default-features = false}
libpulse-glib-binding = { version = "2", default-features = false }
gstreamer-player = "0.14"
gstreamer = "0.14"
glib = "0"
owning_ref = "0.4"
concurrent-hashmap = {version = "0.2", default-features = false}
mpmc-scheduler = "0.3"
http = "0.1"
tower-web = "0.3"

[dependencies.yamba_types]
path = "../types"
version = "0.6"
features = ["track","tower"]
