[package]
name = "yamba-plugin"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>","Oliver Habersetzer <oliver.habersetzer@gmail.com>"]

[lib]
name = "yamba_plugin"
crate-type = ["dylib"]

[dependencies]
lazy_static = "1.1"
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"

[dependencies.ts3plugin]
git = "https://github.com/0xpr03/rust-ts3plugin"
branch = "master"