[package]
name = "yamba-plugin"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>","Oliver Habersetzer <oliver.habersetzer@gmail.com>"]

[lib]
name = "yamba_plugin"
crate-type = ["dylib"]

[features]

# ads !halt command to process::exit for logging
# requires daemon build with massif feature flag
massif = []

[dependencies]
failure = "0"
failure_derive = "0"
lazy_static = "1"
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"
regex = "1"
serde = "1"
serde_derive = "1"
reqwest = {default-features = false, version = "0" }

[dependencies.ts3plugin]
git = "https://github.com/0xpr03/rust-ts3plugin"
branch = "master"