[package]
name = "yamba-plugin"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>","Oliver Habersetzer <oliver.habersetzer@gmail.com>"]
edition = '2018'

[lib]
name = "yamba_plugin"
crate-type = ["cdylib"]

[features]

# ads !halt command to process::exit for logging
# requires daemon build with massif feature flag
massif = []

[dependencies]
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1"
regex = "1"
serde = {features = ["derive"],version = "1"}
reqwest = {default-features = false, version = "0.9" }
ts3plugin = "0.2"

# [dependencies.ts3plugin]
# git = "https://github.com/0xpr03/rust-ts3plugin"
# branch = "yamba_production"

[dependencies.yamba_types]
path = "../types"
version = "0"
default-features = false
features = ["client", "client_internal"]
