[package]
name = "yamba_types"
version = "0.6.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"
license = "GPL-3.0-or-later"

[features]
default = ["rest"]
# Add tower-rs Extract/Response
tower = ["tower-web"]
# Add Track support, should only be required for daemon
track = ["metrohash"]
# Rest models in models
rest = []
# ts3<->daemon types
client_internal = []
# Plugin call types
client = []
# Actix messages for Websocket stuff
message = ["actix"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tower-web = { optional = true, version = "0"}
metrohash = { optional = true, version = "1" }
actix = { optional = true, version = "0.8" }